# rust-browser-connection

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
changelog.d/: 20260523_347_unified_rust_browser.md  20260523_per_project_ports.md  20260524_130100_rust_browser_connection.md  20260524_141210_browser_connection_mcp.md  20260524_171000_autodetect_docker_host.md  20260525_000000_browser_limits_cleanup.md
examples/: basic_usage.rs
scripts/: check-version-modification.rs
src/: browser.rs  cdp.rs  lib.rs  main.rs  mcp.rs
tests/: browser_invariants.rs  cli_status.rs  mcp_stdio.rs
tests/unit/ci-cd/: mod.rs  workflow_release.rs
