[package]
name = "docker-git-browser-connection"
version = "0.3.0"
edition = "2021"
description = "Rust module for noVNC + browser connection (single browser for docker-git, MCP and Hermes tools) — per issue #347"
license = "MIT"
keywords = ["docker-git", "browser", "novnc", "cdp", "playwright", "rust"]
repository = "https://github.com/ProverCoderAI/rust-browser-connection"

[lib]
name = "docker_git_browser_connection"
path = "src/lib.rs"

[[bin]]
name = "docker-git-browser-connection"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.0"
proptest = "1.4"
